--- a/static/style.css
+++ b/static/style.css
@@ -1,1 +1,17 @@
 
+body {
+    font-family: Arial, sans-serif;
+    background-color: #111;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+}
+textarea {
+    width: 90%;
+    height: 100px;
+}
+button {
+    padding: 10px 20px;
+    margin-top: 10px;
+}
+
